replace most http by https

--- a/content/fr/publication/academic-publications.bib
+++ b/content/fr/publication/academic-publications.bib
@@ -48,7 +48,7 @@
   number = {114},
   pages = {152},
   issn = {0025-8296},
-  url = {http://mediterranee.revues.org/4583},
+  url = {https://mediterranee.revues.org/4583},
   urldate = {2017-01-16},
   copyright = {Tous droits réservés},
   langid = {french},
