--- a/content/fr/publication/academic-publications.bib
+++ b/content/fr/publication/academic-publications.bib
@@ -1,4 +1,3 @@
-
 @mastersthesis{audrenEnsemblesResidentielsFermes2007,
   title = {Les Ensembles Résidentiels Fermés à Marseille. Diffusion Spatiale, Typologie et Dynamiques Résidentielles},
   author = {Audren, Gwenaelle and Garniaux, Jérémy},
@@ -48,12 +47,11 @@
   number = {114},
   pages = {152},
   issn = {0025-8296},
-  url = {https://mediterranee.revues.org/4583},
+  url = {http://mediterranee.revues.org/4583},
   urldate = {2017-01-16},
   copyright = {Tous droits réservés},
   langid = {french},
   keywords = {artistes,développement urbain,minorités ethniques},
   file = {/home/jeremy/Zotero/storage/8CLCS6DN/mediterranee-4583.pdf}
 }
-
 
